# autom

./: .flake8  .gitignore  .gitmodules  .ninja_log  AUTOM.build  CMakeLists.txt  DIST.py  LICENSE  Makefile  Makefile.am  README.md  _autom.py  _gnpkg.py  _test.py  autom  autom.bat  autom.sln  automdeps  automdeps.bat  automdeps.py  bootstrap.py  clone.bat  clone.py  conf.py  gnpkg.bat  init.py  main.py
Debug/modules/: android.autom  apple.autom  bridge.autom
Fileformats/: AUTOM  AUTOM.build  AUTOMDEPS  AUTOMEXPORT  AUTOMINSTALL
autom/: __main__.py  autom.py
cc/: autom.c  autom_lexer.c  autom_lexer.h  autom_parser.cpp  autom_util.cpp  autom_util.h  toks.def
cc/autom/: main.cpp
cc/automc/: base.cpp  base.h
docs/: Interfaces.rst  Syntax.rst  autom-sphinx.py  conf.py  index.rst
docs/_ext/: autom-sphinx.py  autom.py
docs/_themes/autom/: layout.html  theme.conf
docs/_themes/autom/static/: theme.css
gn-utils/: BUILDCONFIG.gn  ConfigFile.py  Utils.gni  __copy.py
gn-utils/toolchain/: BUILD.gn
modules/: addon.autom  apple.autom  windows.autom
modules/bridge/: BridgeCMake.cpp  Module.cpp
modules/fs/: Module.cpp
src/: ADT.cpp  ADT.h  Autom.h  Diagnostic.cpp  Diagnostic.h  ExecEngine.cpp  ExecEngine.h  Gen.h  HostTarget.cpp  InstallFile.cpp  InstallFile.h  Parser.cpp  Parser.h  Target.h  TargetDumper.cpp  TargetDumper.h  Targets.def  Toolchain.cpp  Toolchain.h  Toolchains.def  autom.py
src/autom/: __init__.py  __main__.py  autom.py  main.py
src/core/src/main/java/org/omegagraphics/AutomCore/: ASTDecl.java  ASTExpr.java  ASTFactory.java  ASTNode.java  Diagnostic.java  DiagnosticStream.java  FuncDecl.java  Parser.java  TargetDecl.java
src/driver/: main.cpp
src/driver/src/main/java/org/omegagraphics/AutomMain/: Main.java
src/engine/: AST.cpp  AST.def  AST.h  ASTFactory.cpp  ASTFactory.h  Builtins.cpp  Builtins.def  Execution.cpp  Execution.h  Lexer.cpp  Lexer.h  Object.cpp  Tokens.def
src/gnpkg/: Gnpkg.gni  git.py  main.py  pkgs.json
src/gnpkg/projectfiles/asio/: BUILD.gn
src/gnpkg/projectfiles/aws-sdk/: BUILD.gn  Config.h.in  SDKConfig.h  gcc_config.h.in
src/gnpkg/projectfiles/boost/: BUILD.gn
src/gnpkg/projectfiles/libjpeg-turbo/: BUILD.gn
src/gnpkg/projectfiles/libpng/: BUILD.gn
src/gnpkg/projectfiles/libtiff/: BUILD.gn
src/gnpkg/projectfiles/socket.io-client/: BUILD.gn
src/gnpkg/projectfiles/websocketpp/: BUILD.gn
src/parser/: AST.cpp  AST.def  AST.h  ASTFactory.cpp  ASTFactory.h  Execution.cpp  Execution.h  Lexer.cpp  Lexer.h  Tokens.def
src/tests/: lex-test.cpp  run-test.cpp
src/tools/: install-main.cpp
stdlib/: fs.autom
stdlib/bridge/: BridgeCMake.cpp  BridgeGN.cpp  Module.cpp
stdlib/fs/: Module.cpp
test/: AUTOMPROJ  CMakeLists.txt  Test.txt  Test.txt.in  test.cpp
tests/autom/: .ninja_log  AUTOM  AUTOMPROJ  build.ninja  test  test.cpp
tests/gn-utils/: BUILD.gn  gn-utils
tests/gn-utils/src/: dynlib.cpp  framework.cpp  framework.h  main.mm  staticLib.cpp
tests/gn-utils/src/MyApp/: Info.plist
tests/gn-utils/src/MyFramework/: Info.plist
tests/gnpkg/: .gitignore  .gn  BUILD.gn  GNPKG
tests/gnpkg/src/: test.cpp
tm/: Info.plist  autom.yaml  textmate.py  vscode_ext.py
tm/vscode/: autom-vscode-0.1.2.vsix  language-configuration.json  package-lock.json  package.json
tm/vscode/syntaxes/: Autom.tmLanguage.json
tools/: autom-clone.bat  autom-deps.bat  autom_deps.py  default_toolchains.json  omega-conf.bat  vc-init.bat
tools/cmake/: OmegaGraphicsSuite.cmake
tools/gn-utils/: BUILDCONFIG.gn  ConfigFile.py  PkgConf.py  Utils.gni  _glob.py  gen_target_output.py
tools/gn-utils/toolchain/: BUILD.gn
tools/src/gnpkg/projectfiles/aws-sdk/: BUILD.gn
tools/src/gnpkg/projectfiles/zlib/: BUILD.gn
