import("//gn-utils/Utils.gni")

if(is_linux){
    static_lib_suffix = "a"
    shared_lib_suffix = "so"
    lib_prefix = "lib"
}
else if(is_mac){
    static_lib_suffix = "a"
    shared_lib_suffix = "dylib"
    lib_prefix = "lib"
}
else {
    static_lib_suffix = "lib"
    shared_lib_suffix = "dll"
    lib_prefix = ""
}

external_lib_path = "$root_out_dir/externals/"

template("external_lib_target"){
    assert(defined(invoker.public_headers))
    t_name = "${target_name}""
    copy("${target_name}_headers"){
        visibility = [":$t_name"]
        sources = invoker.public_headers
        # if(built == false){
            outputs = [
                "${invoker.output_dir}/include/{{source_file_part}}"
            ]
        # }
    }

    if(defined(invoker.public_deps)){
        invoker.public_deps += [":${target_name}_headers"]
    }
    else {
        invoker.public_deps = [":${target_name}_headers"]
    }

    if(defined(invoker.static)){
        if(invoker.static == true){
            static_library(target_name){
                forward_variables_from(invoker,["sources","deps","public_deps","configs","public_configs","include_dirs","output_dir","defines","ldflags","cflags_c","cflags_cc","output_name","visibility"])
            }
        }
    }
    else if(defined(invoker.is_source_set)){
        if(invoker.is_source_set){
            source_set(target_name){
                forward_variables_from(invoker,["sources","deps","public_deps","configs","public_configs","include_dirs","output_dir","defines","ldflags","cflags_c","cflags_cc","output_name","visibility"])
            }
        }
    }
    else {
        shared_library(target_name){
           forward_variables_from(invoker,["sources","deps","public_deps","configs","public_configs","include_dirs","output_dir","defines","ldflags","cflags_c","cflags_cc","output_name","visibility"]) 
        }
    }

    if(!defined(invoker.export_config)){

        config("${target_name}_config"){
            include_dirs = ["${invoker.output_dir}/include"]
        }

    }
    else {
        if(invoker.export_config){

            config("${target_name}_config"){
                include_dirs = ["${invoker.output_dir}/include"]
            }
            
        }
    }

    
}