import("//gn-utils/Utils.gni")

shared_library("dynlib"){
    sources = ["src/dynlib.cpp"]
    output_dir = "$root_out_dir/lib"
}

if(is_mac){

    mac_framework_bundle("MyFramework"){
        sources = [
            "src/framework.cpp"
        ]
        public_deps = [
            ":dynlib"
        ]
        version = "A"
        resources = [
            "./src/MyFramework/Info.plist"
        ]
        embedded_libs = ["$root_out_dir/lib/dynlib.dylib"]
        output_dir = "$root_out_dir/Frameworks"
    }

    mac_app_bundle("MyApp"){
        sources = [
            "src/main.mm"
        ]
        resources = [
            "./src/MyApp/Info.plist"
        ]
        frameworks = [
            "Cocoa.framework"
        ]
        public_deps = [
            ":MyFramework.framework"
        ]
        output_dir = "$root_out_dir/Apps"
        embedded_frameworks = ["MyFramework.framework"]
    }

}