import("//gn-utils/Utils.gni")

executable("test-aws"){
    sources = [
        "./src/test.cpp"
    ]
    public_configs = [
        "//third_party/aws-sdk:aws-sdk-config",
        "//third_party/socket.io-client:socket.io-client_config"
    ]
    public_deps = [
        "//third_party/aws-sdk:aws-sdk-core",
        "//third_party/socket.io-client",
    ]
    output_dir = "$root_out_dir/tests"
}

install("install_aws_test"){
    files = [
        "$root_out_dir/tests/test-aws.exe"
    ]
    dest = "\$(INSTALL_PREFIX)/bin"
}