import("../Gnpkg.gni")

package_out_dir = "${built_package_out_dir}/asio"

external_header_lib_target("asio"){
    sources = [
        "./code/asio/include/asio.hpp",
        "./code/asio/include/asio"
    ]
    include_dirs = [
        "${package_out_dir}/include"
    ]
    defines = [
        "BOOST_DATE_TIME_NO_LIB",
        "BOOST_REGEX_NO_LIB",
        "ASIO_STANDALONE",
    ]
    output_dir = "${package_out_dir}/include"
}